--- a/src/components/home-page/home-page.styles.scss
+++ b/src/components/home-page/home-page.styles.scss
@@ -1,6 +1,6 @@
 .main{
     width: 100%;
-    height: 88vh;
+    height: 100vh;
     background: url(../../asstes/backgroundImages/whitePlan.jpg);
     background-size: cover;
     opacity: 0;
@@ -17,6 +17,7 @@
     display: flex;
     width: 100%;
     height: 100%;
+    
 }
 
 .main-container .main-left{
@@ -26,6 +27,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 4vh;
     // background-color: beige;
 
 }
@@ -77,6 +79,7 @@
      width: 50%;
     height: 100%;
     display:flex ;
+    margin-top: 5vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -119,7 +122,7 @@
 @media (max-width: 600px) {
     .main{
     width: 100%;
-    height: 88vh;
+    height: 100vh;
     background: url(../../asstes/backgroundImages/whitePlan.jpg);
     background-size: cover;
     opacity: 0;
@@ -141,6 +144,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+
     // background-color: beige;
 
 }
@@ -192,6 +197,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 12vh;
     // background-color:lightgoldenrodyellow ;
 }
 // .main-right .rightImg1{
