--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -6,7 +6,7 @@
 }
 
 .navbar {
-  
+  width: 100%;
   height: 12vh;
   background-color: white;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
@@ -16,7 +16,8 @@
   animation: slideDown 0.7s ease forwards;
   opacity: 0;
    position: relative; /* ✅ Add this */
-  z-index: 1000;      
+  z-index: 1000;  
+  position: fixed;    
 }
 
 /* Flex container for layout */
@@ -49,6 +50,7 @@
   list-style: none;
   opacity: 0;
   animation: fadeIn 0.6s ease forwards;
+  margin-right: 15vw;
 }
 .nav-links li:nth-child(1) {
   animation-delay: 0.5s;
@@ -65,8 +67,8 @@
 
 .nav-links li a {
   text-decoration: none;
-  font-size: 1.1rem;
-  color: #333;
+  font-size: 1.3rem;
+  color: #000000;
   transition: color 0.3s ease;
 }
 
