--- a/src/components/services/services.styles.scss
+++ b/src/components/services/services.styles.scss
@@ -86,6 +86,8 @@
     padding: 1vw;
     font-size:1vw;
     background-color: transparent;
+    text-decoration: none;
+    color: #fff;
     border: 1px solid rgb(255, 255, 255);
 
 }
