--- a/src/components/home-page/home-page.styles.scss
+++ b/src/components/home-page/home-page.styles.scss
@@ -213,3 +213,104 @@
     background-size: contain;
 }
 }
+
+
+
+//tablet screen
+
+@media(max-width : 1024px){
+   .main{
+    width: 100%;
+    height: 130vh;
+    background: url(../../asstes/backgroundImages/whitePlan.jpg);
+    background-size: cover;
+    opacity: 0;
+  animation: fadeSlideUp 1s ease-out forwards;
+  animation-delay: 0.5s; /* slightly after navbar */
+}
+
+.main-container{
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+    height: 100%;
+}
+
+.main-container .main-left{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+    // background-color: beige;
+
+}
+.main-left h1,
+.main-left p,
+.main-left button {
+  opacity: 0;
+  transform: translateY(30px);
+  animation: fadeSlideUp 0.8s ease-out forwards;
+}
+.main-container .main-left h1{
+    font-size: 6vw;
+    font-weight: 400;
+    margin: 0 5vw;
+    animation-delay: 0.8s;
+}
+.main-container .main-left p{
+    font-size: 2.5vw;
+    color: #313131;
+    margin-right: 10vw;
+    margin-left: 5vw;
+     padding: 10vw 0; 
+      animation-delay: 1s;
+
+}
+.main-container .main-left button{
+    cursor: pointer;
+    width: 35vw;
+    text-align: center;
+    padding: 2vw;
+    font-size: 2vw;
+    margin-right: 55%;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    color: #000000;
+     border: 1px solid black;
+      animation-delay: 1.2s;
+}
+.main-container .main-left button:hover{
+    transition: 0.2s ease-in-out;
+    background-color: #fff;
+    color: #000;
+    border: 1px solid black;
+}
+.main-container .main-right{
+     width: 100%;
+    height: 50%;
+    display:flex ;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 12vh;
+    margin-bottom: -10vh;
+  
+    // background-color:lightgoldenrodyellow ;
+}
+// .main-right .rightImg1{
+//     width: 100%;
+//     height: 50%;
+//     background-size: cover;
+//     background: url(../../asstes/home1.jpg) ;
+// }
+.main-right .rightImg2{
+    width: 100%;
+    height: 100%;
+    background: url(../../asstes/home2.png)  no-repeat center center;
+    background-size: contain;
+}
+}
