--- a/src/components/services/services.styles.scss
+++ b/src/components/services/services.styles.scss
@@ -253,3 +253,156 @@
         background-size: cover;
 }
 }
+
+
+
+@media (min-width: 601px) and (max-width:1024px) {
+    .reveal {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 2s ease-out;
+  will-change: opacity, transform;
+}
+
+.reveal.active {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
+.services{
+    width: 100%;
+    height: 70vh;
+    margin-bottom: 20vh;
+
+}
+.services-header{
+    width: 100%;
+    height: 20vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    background-color: rgb(0, 0, 0);
+}
+
+.services-header h1{
+    font-size: 7vw;
+    font-weight: 200;
+    letter-spacing: 1vw;
+    color: #fff;
+
+}
+.services-header h1:hover{
+    letter-spacing: 2.2vw;
+    transition: 0.3s ease-out;
+}
+.services .services-container{
+  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    background:url(../../asstes/backgroundImages/black2.jpg) no-repeat center center;
+    background-size: cover;
+
+}
+
+.services-container .services-card{
+    width: 45%;
+    height: 30vh;
+    margin: 0vh 2vw; /* Reduced vertical margin from 5vh to 2vh */
+    border-radius: 1vw;
+    background-color: black;
+}
+.services-container .services-card .inside-services-card{
+      border-radius: 1vw;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.678);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.services-card .inside-services-card h1{
+
+    font-size: 3.5vw;
+    font-weight: 200;
+    letter-spacing: 1vw;
+    color: #fff;
+
+}
+.services-card .inside-services-card p{
+    font-size: 1.5vw;
+    margin: 4vw;
+    color: #fff;
+
+}
+.services-card .inside-services-card a{
+    cursor: pointer;
+    padding: 1.3vw;
+    font-size:1.5vw;
+    background-color: transparent;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid rgb(255, 255, 255);
+
+}
+.services-card .inside-services-card a:hover{
+    transition: 0.3s;
+    background-color: white;
+    color: black;
+    padding: 1vw 3vw;
+}
+.services-card .inside-services-card:hover{
+    opacity: 1;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.747);
+    transition: 0.2s ease-in;
+    color: aliceblue;
+}
+
+
+  
+.services-container .services-card:nth-child(1){
+    background:url(../../asstes/services/webDesign.jpg) no-repeat center center;
+    background-size: cover;
+}
+.services-container .services-card:nth-child(1):hover{
+    background:url(../../asstes/services/web2.jpg) no-repeat center center;
+    background-size: cover;
+    transition: 0.5s ease-in;
+}
+.services-container .services-card:nth-child(2){
+    background: url(../../asstes/services/graphicDesign.jpg) no-repeat center center;
+        background-size: cover;
+}
+.services-container .services-card:nth-child(2):hover{
+    background: url(../../asstes/services/graphic2.jpg) no-repeat center center;
+        background-size: cover;
+        transition: 0.5s ease-in;
+}
+.services-container .services-card:nth-child(3){
+    background: url(../../asstes/services/AppDesign.jpg) no-repeat center center;
+        background-size: cover;
+}
+.services-container .services-card:nth-child(3):hover{
+    background: url(../../asstes/services/app2.jpg) no-repeat center center ;
+        background-size: cover;
+        transition: 0.5s ease-in;
+}
+.services-container .services-card:nth-child(4){
+    background: url(../../asstes/services/consultant3.jpg) no-repeat center center;
+        background-size: cover;
+}
+.services-container .services-card:nth-child(4):hover{
+    background: url(../../asstes/services/consultant2.jpg) no-repeat center center ;
+        background-size: cover;
+        transition: 0.5s ease-in;
+}
+
+}
