--- a/src/components/workShowCase/workShowCase.styles.scss
+++ b/src/components/workShowCase/workShowCase.styles.scss
@@ -261,9 +261,6 @@
     background-size: contain;
 
 }
-
-
-
 .work2{
     width: 100%;
     height: 80vh;
@@ -334,6 +331,154 @@
     background-size: contain;
 
 }
+}
 
 
+@media (min-width: 601px) and (max-width: 1024px){
+    .workShow{
+    width: 100%;
+    height: 325vh;
+    background: url(../../asstes/backgroundImages/whitePlan.jpg) no-repeat center center;
+    background-size: cover;
+}
+.workShow-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.work-heading{
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.work-heading h2{
+    font-size: 3vw;
+    letter-spacing: 1vw;
+}
+
+.work1{
+    width: 100%;
+    height: 110vh;
+    
+}
+
+.work1 .work1-top{
+    margin-top: 5vh;
+    width: 100%;
+    height: 33%;
+    background: url(../../asstes/workcase/dkclothing1.png) no-repeat center center;
+    background-size: contain;
+}
+
+.work1 .work1-bottom{
+    width: 100%;
+    height: 67%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.work1-bottom .work1-bleft{
+    width:48%;
+    height: 100%;
+    background: url(../../asstes/workcase/dkclothing2.png) no-repeat center center;
+     background-size: contain;
+}
+.work1-bottom .work1-bright{
+    width:48%;
+    height: 100%;
+    background: url(../../asstes/workcase/dkclothing3.png) no-repeat center center;
+    background-size: contain;
+
+}
+
+
+.work2{
+    width: 100%;
+    height: 80vh;
+}
+
+.work2 .work2-top{
+    margin-top: 0vh;
+    width: 100%;
+    height: 60%;
+    background: url(../../asstes/workcase/educera2.png) no-repeat center center;
+    background-size: contain;
+}
+
+.work2 .work2-bottom{
+    width: 100%;
+    height: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.work2-bottom .work2-bleft{
+    width:48%;
+    height: 100%;
+    background: url(../../asstes/workcase/Educera.png) no-repeat center center;
+     background-size: contain;
+}
+.work2-bottom .work2-bright{
+    width:48%;
+    height: 100%;
+    background: url(../../asstes/workcase/educera3.png) no-repeat center center;
+    background-size: contain;
+
+}
+
+
+.work3{
+    width: 100%;
+    height: 80vh;
+    
+}
+
+.work3 .work3-top{
+    margin-top: 5vh;
+    width: 100%;
+    height: 50%;
+    background: url(../../asstes/workcase/portdolio1.png) no-repeat center center;
+    background-size: contain;
+}
+
+.work3 .work3-bottom{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.work3-bottom .work3-bleft{
+    width:45%;
+    height: 100%;
+    background: url(../../asstes/workcase/portfolio2.png) no-repeat center center;
+     background-size: contain;
+}
+.work3-bottom .work3-bright{
+    width:45%;
+    height: 100%;
+    background: url(../../asstes/workcase/portfolio3.png) no-repeat center center;
+    background-size: contain;
+
+}
+
+.heading{
+    width: 100%;
+    height:15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.heading h1{
+    font-size: 6vw;
+    letter-spacing: 3vw;
+    text-decoration: overline;
+}
 }
