--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -186,3 +186,40 @@
     display: flex;
   }
 }
+@media (min-width: 601px) and (max-width: 1024px) { 
+    /* Styles for screens smaller than 1024px */
+    .nav-links {
+    display: none;
+    position: absolute;
+    top: 12vh;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: white;
+    flex-direction: column;
+    padding: 1rem;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  }
+  .logo{
+    margin-top: 5vw;
+    
+  }
+  .logo img{
+ width: 35vw;
+ margin-left: -5vw;
+ height: 30vw;
+
+}
+
+  .nav-links.open {
+    display: flex;
+  }
+
+  .nav-right {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+}
