--- a/src/components/home-page/home-page.styles.scss
+++ b/src/components/home-page/home-page.styles.scss
@@ -218,7 +218,7 @@
 
 //tablet screen
 
-@media(max-width : 1024px){
+@media (min-width: 601px) and (max-width : 1024px){
    .main{
     width: 100%;
     height: 130vh;
