--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -27,8 +27,10 @@
 }
 
 .footer-logo {
-  width: 120px;
-  margin-bottom: 15px;
+  width: 250px;
+  margin-top: -11vh;
+  margin-bottom: -5vh;
+  
 }
 
 .footer-about {
