--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -134,10 +134,8 @@
   background: url(../../asstes/backgroundImages/black.jpg) no-repeat center center;
   background-size: cover;
   border-radius: 1vw;
-
   margin: 0 auto;
   padding: 40px 20px;
-
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -193,3 +191,25 @@
   }
 }
 
+@media only screen and (max-width: 958px) and (orientation: landscape) {
+.contact {
+  width: 100%;
+  height:280vh;
+  display: flex;
+  margin-bottom: -30vh;
+  align-items: center;
+  justify-content: center;
+  background: url(../../asstes/backgroundImages/whitePlan.jpg) no-repeat center center;
+}
+
+.contact-form button {
+  padding: 20px;
+  background: #ffffff;
+  color: rgb(0, 0, 0);
+  font-size: 1.5rem;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+}
