--- a/src/components/home-page/home-page.styles.scss
+++ b/src/components/home-page/home-page.styles.scss
@@ -213,11 +213,7 @@
     background-size: contain;
 }
 }
-
-
-
 //tablet screen
-
 @media (min-width: 601px) and (max-width : 1024px){
    .main{
     width: 100%;
@@ -313,4 +309,97 @@
     background: url(../../asstes/home2.png)  no-repeat center center;
     background-size: contain;
 }
+}
+
+@media only screen and (max-width: 958px) and (orientation: landscape) {
+.main{
+    width: 100%;
+    height: 120vh;
+    background: url(../../asstes/backgroundImages/whitePlan.jpg);
+    background-size: cover;
+    opacity: 0;
+  animation: fadeSlideUp 1s ease-out forwards;
+  animation-delay: 0.5s; /* slightly after navbar */
+}
+
+.main-container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
+.main-container .main-left{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    // background-color: beige;
+
+}
+
+.main-left h1,
+.main-left p,
+.main-left button {
+  opacity: 0;
+  transform: translateY(30px);
+  animation: fadeSlideUp 0.8s ease-out forwards;
+}
+.main-container .main-left h1{
+    font-size: 2.5vw;
+    font-weight: 300;
+    margin: 0 2vw;
+    animation-delay: 0.8s;
+    letter-spacing: 0.2vw;
+}
+.main-container .main-left p{
+    font-size: 1.5vw;
+    color: #313131;
+    margin-right: 10vw;
+    margin-left: 2vw;
+     padding: 5vw 0; 
+      animation-delay: 1s;
+
+}
+.main-container .main-left button{
+     position: relative;
+  cursor: pointer;
+  width: 20vw;
+  padding: 1vw;
+  font-size: 1.5vw;
+  margin-right: 57%;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  color: #000000;
+  border-radius: 1vw;
+  z-index: 10;
+
+  /* Apply both animations */
+  animation: fadeSlideUp 0.8s ease-out forwards 1.2s, bounceUpDown 1s infinite ease-in-out 2s;
+}
+
+.main-container .main-right{
+     width: 50%;
+    height: 80%;
+    display:flex ;
+    margin-top: 15vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    // background-color:lightgoldenrodyellow ;
+}
+// .main-right .rightImg1{
+//     width: 100%;
+//     height: 50%;
+//     background-size: cover;
+//     background: url(../../asstes/home1.jpg) ;
+// }
+.main-right .rightImg2{
+    width: 100%;
+    height: 100%;
+    background: url(../../asstes/home2.png)  no-repeat center center;
+    background-size: contain;
+}
+
 }
