--- a/src/components/tesimonial/testimonial.styles.scss
+++ b/src/components/tesimonial/testimonial.styles.scss
@@ -10,7 +10,8 @@
     width: 100%;
     height: 20vh;
 
-}.Testi-header h1{
+}
+.Testi-header h1{
     padding-top: 8vw;
     font-size: 7vw;
     letter-spacing: 3vw;
@@ -90,7 +91,7 @@
       font-size: 1.5rem;
     }
 
-    @media (max-width: 768px) {
+@media (max-width: 768px) {
       .Testi{
     width: 100%;
     height: 100vh;
@@ -178,7 +179,7 @@
       color: #f39c12;
       font-size: 1.5rem;
     }
-    }
+}
 
 @media (min-width: 601px) and (max-width:1024px) {
   .Testi{
@@ -278,4 +279,40 @@
       color: #f39c12;
       font-size: 1.5rem;
     }
+}
+
+@media only screen and (max-width: 958px) and (orientation: landscape) {
+.Testi{
+    width: 100%;
+    height: 170vh;
+    background:url(../../asstes/backgroundImages/black2.jpg);
+}
+.Testi-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 20vh;
+
+}
+.Testi-header h1{
+    padding-top: 0vw;
+    padding-bottom: 5vw;
+    font-size: 7vw;
+    letter-spacing: 3vw;
+    font-weight: 200;
+    color: #fff;
+}
+.testimonial-card {
+      flex: 0 0 400px;
+      margin: 0 30px;
+      border: 1px solid black;
+      background: #ffffff;
+      border-radius: 16px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      padding: 10px 30px;
+      text-align: center;
+      transition: transform 0.3s ease;
+    }
+
 }
