--- a/src/components/workShowCase/workShowCase.styles.scss
+++ b/src/components/workShowCase/workShowCase.styles.scss
@@ -137,7 +137,6 @@
 .work3{
     width: 100%;
     height: 190vh;
-    
 }
 
 .work3 .work3-top{
@@ -480,5 +479,60 @@
     font-size: 6vw;
     letter-spacing: 3vw;
     text-decoration: overline;
+}
+}
+
+@media only screen and (max-width: 958px) and (orientation: landscape) {
+   .workShow{
+    width: 100%;
+    height: 650vh;
+    background: url(../../asstes/backgroundImages/whitePlan.jpg) no-repeat center center;
+    background-size: cover;
+}
+.workShow-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+} 
+
+.work-heading{
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.work-heading h2{
+    font-size: 2vw;
+    letter-spacing: 1vw;
+}
+.work1{
+    width: 100%;
+    height: 250vh; 
+}
+
+.work2{
+    width: 100%;
+    height: 150vh;    
+}
+.work3{
+    width: 100%;
+    height: 190vh;
+}
+.heading h1{
+    font-size: 3vw;
+    
+}
+.heading{
+    width: 100%;
+    height:30vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 }
