--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -223,3 +223,15 @@
     display: flex;
   }
 }
+
+@media only screen and (max-width: 958px) and (orientation: landscape) {
+.navbar {
+  width: 100%;
+  height: 25vh; 
+}
+ .nav-links {
+    display: none;
+    top: 0vh;
+   
+  }
+}
