--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -89,7 +89,7 @@
 }
 
 
-@media only screen and (max-width: 958px) and (orientation: landscape) {
+@media only screen and (max-width: 1023px) and (orientation: landscape) {
   .footer-logo {
   width: 200px;
   margin-top: -10vh;
@@ -97,7 +97,8 @@
   
 }
 .footer {
-  height: 80vh;
+  width: 100%;
+  height: 100%;
   background-color: #111;
   color: #eee;
   padding: 40px 20px;
