--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -42,7 +42,7 @@
   width: 100%;
   max-width: 1300px;
   height: 70%;
-  background: url(../../asstes/backgroundImages/black.jpg) no-repeat center center;
+  background: url(../../asstes/backgroundImages/black4.jpg) no-repeat center center;
   background-size: cover;
   border-radius: 1vw;
 
@@ -126,6 +126,10 @@
   font-size: 12vw;
   color: #ffffff;
   font-weight: 300;
+}
+.contact-section button{
+  font-size: 4vw;
+  padding: 4vw;
 }
 .contact-section {
   width: 100%;
